--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -97,25 +97,16 @@
                 android:inputType="text" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:layout_gravity="center"
-            android:onClick="forgotPass"
-            android:text="Forgot your password?"
-            android:textColor="@color/orange" />
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="40dp"
             android:layout_marginBottom="10dp"
             android:backgroundTint="@color/orange"
             android:layout_gravity="center"
-            android:text="Login"
+            android:text="Sign up"
             android:background="@drawable/rounded_button"
             android:ems="10"/>
 
