--- a/app/src/main/res/layout/activity_verificationcode.xml
+++ b/app/src/main/res/layout/activity_verificationcode.xml
@@ -49,6 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal">
             <EditText
                 android:layout_marginStart="10dp"
@@ -99,6 +100,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="match_parent"
