--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".LoginActivity"
     android:background="@color/grayWhite">
     <LinearLayout
         android:layout_width="wrap_content"
@@ -119,6 +121,8 @@
                 android:layout_height="wrap_content"
                 android:text="Don't have an account?" />
             <TextView
+                android:id="@+id/gotoSignup"
+                android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
