--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -129,7 +129,7 @@
                 android:layout_height="wrap_content"
                 android:text="Already have an account? " />
             <TextView
-                android:id="@+id/txtLogin"
+                android:id="@+id/gotoLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
