--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -8,14 +8,16 @@
 
     android:background="@drawable/wel_backg"
     >
+
     <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/welcomeSkip"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:layout_alignParentRight="true"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/drawable_button"
         android:backgroundTint="@color/white"
-        android:layout_alignParentRight="true"
         android:text="Skip"
         android:textColor="@color/orange" />
     <LinearLayout
@@ -51,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="100dp"
             android:orientation="horizontal"
 
             android:weightSum="3">
@@ -70,6 +72,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:textColor="@color/white"
                 android:text="Sign in with" />
 
             <ImageView
@@ -137,7 +140,7 @@
                 android:textSize="14sp" />
 
             <TextView
-                android:id="@+id/tvLogin"
+                android:id="@+id/gotoLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
