--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#FE724C</color>
     <color name="grayWhite">#f2f2f2</color>
+    <color name="yellow">#FFF53B</color>
 </resources>
