--- a/app/src/main/res/layout/layout_dialog.xml
+++ b/app/src/main/res/layout/layout_dialog.xml
@@ -25,6 +25,7 @@
         android:orientation="vertical">
 
         <EditText
+            android:id="@+id/dialogname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/gray_border"
