--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -64,6 +64,7 @@
                 android:hint="Full Name">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/signupName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text" />
@@ -84,7 +85,7 @@
                 android:hint="Your email or phone">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edtEmail"
+                    android:id="@+id/signupEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text" />
@@ -105,7 +106,7 @@
                 android:hint="Your password">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edtPass"
+                    android:id="@+id/signupPass"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text" />
