--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -66,16 +66,19 @@
             android:text="E-mail" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/inputEmail"
+            android:id="@+id/emailContainer"
+            app:helperText="@string/Required"
+            app:helperTextTextColor="@android:color/holo_red_dark"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Your email or phone">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/inputEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text" />
+                android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
         <TextView
             android:layout_width="wrap_content"
@@ -84,7 +87,9 @@
             android:text="Password" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/inputPass"
+            android:id="@+id/passContainer"
+            app:helperText="@string/Required"
+            app:helperTextTextColor="@android:color/holo_red_dark"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -92,6 +97,7 @@
             android:hint="Your password">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/inputPass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text" />
