--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,14 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-    </data>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".LoginActivity"
+        tools:context=".activity.LoginActivity"
         android:background="@color/grayWhite">
 
         <LinearLayout
@@ -57,13 +53,13 @@
                 android:text="E-mail" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/inputEmail"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Your email or phone">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inputEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text" />
@@ -76,7 +72,7 @@
                 android:text="Password" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/inputPass"
+
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -84,6 +80,7 @@
                 app:passwordToggleEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inputPass"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text" />
@@ -106,7 +103,6 @@
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/rounded_button"
                 android:backgroundTint="@color/orange"
-
                 android:ems="10"
                 android:text="Login" />
 
@@ -133,7 +129,7 @@
                 <TextView
                     android:id="@+id/gotoSignup"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_marginLeft="10dp"
                     android:text="Sign up"
