--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -2,12 +2,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-        <variable
-            name="user"
-            type="com.first_java_app.k_login_signup.UserHelper" />
-    </data>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -82,7 +76,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-
+                android:text="Edge Endaz"
                 android:textColor="@color/black" />
 
             <TextView
@@ -96,7 +90,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-
+                android:text="prelookstudio@gmail.com"
                 android:textColor="@color/black" />
 
             <TextView
@@ -107,7 +101,7 @@
 
             <TextView
                 android:id="@+id/txtPhone"
-
+                android:text="(+84) 3723 4221"
                 android:layout_width="356dp"
                 android:layout_height="39dp"
                 android:inputType="text"
