--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <data>
-
-    </data>
-
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".SignUpActivity"
         android:background="#ECE4E4">
 
         <LinearLayout
@@ -57,14 +50,14 @@
                 android:text="FullName" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/inputFullName"
+
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Full Name">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/signupName"
+                    android:id="@+id/inputFullName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text" />
@@ -78,14 +71,14 @@
                 android:text="E-mail" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/inputEmail"
+
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Your email or phone">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/signupEmail"
+                    android:id="@+id/inputEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text" />
@@ -98,7 +91,7 @@
                 android:text="Password" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/inputPass"
+
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -106,7 +99,7 @@
                 android:hint="Your password">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/signupPass"
+                    android:id="@+id/inputPass"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text" />
@@ -114,7 +107,7 @@
 
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnLogin"
+                android:id="@+id/btnSignUp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
