--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    <data>
+        <variable
+            name="user"
+            type="com.first_java_app.k_login_signup.model.User" />
+    </data>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -101,7 +105,20 @@
 
             <TextView
                 android:id="@+id/txtPhone"
+                android:layout_width="356dp"
+                android:layout_height="39dp"
+                android:inputType="text"
                 android:text="(+84) 3723 4221"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:text="Password" />
+
+            <TextView
+                android:id="@+id/txtPassword"
                 android:layout_width="356dp"
                 android:layout_height="39dp"
                 android:inputType="text"
