--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activity.LoginActivity"
-        android:background="@color/grayWhite">
+        android:background="#ECE4E4">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -31,7 +28,9 @@
             android:layout_alignParentRight="true"
             android:src="@drawable/ic_orangecir" />
 
+
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
@@ -39,12 +38,34 @@
             android:layout_marginRight="30dp"
             android:orientation="vertical">
 
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="80dp"
-                android:text="Log in"
+                android:layout_marginTop="40dp"
+                android:text="Sign up"
                 android:textSize="40dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="FullName" />
+
+            <com.google.android.material.textfield.TextInputLayout
+
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Full Name">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/inputFullName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text" />
+            </com.google.android.material.textfield.TextInputLayout>
+
 
             <TextView
                 android:layout_width="wrap_content"
@@ -53,6 +74,7 @@
                 android:text="E-mail" />
 
             <com.google.android.material.textfield.TextInputLayout
+
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -76,8 +98,8 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Your password"
-                app:passwordToggleEnabled="true">
+                app:passwordToggleEnabled="true"
+                android:hint="Your password">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/inputPass"
@@ -86,25 +108,18 @@
                     android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:text="Forgot your password?"
-                android:textColor="@color/orange" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/loginBtn"
+                android:id="@+id/btnSignUp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
-                android:background="@drawable/rounded_button"
                 android:backgroundTint="@color/orange"
-                android:ems="10"
-                android:text="Login" />
+                android:layout_gravity="center"
+                android:text="Sign up"
+                android:background="@drawable/rounded_button"
+                android:ems="10" />
 
             <!--        <ImageView-->
             <!--            android:layout_width="wrap_content"-->
@@ -124,15 +139,14 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Don't have an account?" />
+                    android:text="Already have an account? " />
 
                 <TextView
-                    android:id="@+id/gotoSignup"
+                    android:id="@+id/gotoLogin"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:text="Sign up"
+                    android:text="Login"
                     android:textColor="@color/orange" />
             </LinearLayout>
 
@@ -140,10 +154,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="30dp"
-                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:weightSum="3"
 
-                android:weightSum="3">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -153,13 +167,13 @@
                     android:src="@drawable/ic__bottomline" />
 
                 <TextView
+                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
+                    android:text="Sign in with"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="Sign in with" />
+                    android:gravity="center" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -173,9 +187,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:orientation="horizontal"
+                android:weightSum="2"
 
-                android:weightSum="2">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="wrap_content"
